# wr-analysis-light

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
collectors/: __init__.py  ansa_collector.py  base.py  bbc_collector.py  bluesky_collector.py  brave_collector.py  gdelt_collector.py  gnews_it_collector.py  guardian_collector.py  hackernews_collector.py  lemmy_collector.py  mastodon_collector.py  news_collector.py  nyt_collector.py  reddit_collector.py  retry.py  stackexchange_collector.py  wikipedia_collector.py  wikitalk_collector.py  youtube_collector.py  youtube_comments_collector.py
exporters/: __init__.py  csv_exporter.py  json_exporter.py  summary_exporter.py
models/: __init__.py  record.py
normalizers/: __init__.py  ansa.py  bbc.py  bluesky.py  brave.py  gdelt.py  gnews_it.py  guardian.py  hackernews.py  lemmy.py  mastodon.py  news.py  nyt.py  reddit.py  registry.py  stackexchange.py  utils.py  wikipedia.py  wikitalk.py  youtube.py  youtube_comments.py
pipeline/: __init__.py  cleaner.py  date_filter.py  deduplicator.py  enricher.py  runner.py
storage/: raw_store.py
utils/: __init__.py  filename.py  logging_config.py  slugify.py  timestamp.py
wiki/: Architettura.md  Collectors.md  Configurazione.md  Home.md  Installazione.md  Schema-Dati.md  Troubleshooting.md  Utilizzo.md
